Move CLI generation to duepublico-setup build zip/tar also