@@ -23,6 +23,68 @@
     <plugins>
 
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>appassembler-maven-plugin</artifactId>
+        <configuration>
+          <assembleDirectory>${project.build.directory}</assembleDirectory>
+          <configurationSourceDirectory>${project.parent.basedir}/duepublico-webapp/src/main/resources</configurationSourceDirectory>
+          <configurationDirectory>config</configurationDirectory>
+          <copyConfigurationDirectory>true</copyConfigurationDirectory>
+          <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+          <extraJvmArguments>-DMCR.AppName=${MCR.AppName}
+            -Xms1024m -Xmx2048m
+            --add-opens java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
+            --add-opens java.base/java.net=ALL-UNNAMED</extraJvmArguments>
+          <repositoryLayout>flat</repositoryLayout>
+          <repositoryName>lib</repositoryName>
+          <useWildcardClassPath>true</useWildcardClassPath>
+          <binFileExtensions>
+            <unix>.sh</unix>
+            <windows>.cmd</windows>
+          </binFileExtensions>
+          <licenseHeaderFile>src/main/cli/license-header.txt</licenseHeaderFile>
+          <programs>
+            <program>
+              <mainClass>org.mycore.frontend.cli.MCRCommandLineInterface</mainClass>
+              <id>${MCR.AppName}</id>
+            </program>
+          </programs>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>assemble</goal>
+            </goals>
+            <phase>package</phase>
+          </execution>
+        </executions>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <finalName>duepublico-cli</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
+          <descriptors>
+            <descriptor>src/main/cli/assembly-descriptor.xml</descriptor>
+          </descriptors>
+          <tarLongFileMode>gnu</tarLongFileMode>
+          <appendAssemblyId>false</appendAssemblyId>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <phase>package</phase>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
         <groupId>org.mycore.plugins</groupId>
         <artifactId>solr-runner-maven-plugin</artifactId>
         <configuration>
@@ -35,4 +97,74 @@
     </plugins>
   </build>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.mycore</groupId>
+      <artifactId>mycore-meta</artifactId>
+      <type>pom</type>
+      <exclusions>
+        <!-- remove webapp only components -->
+        <exclusion>
+          <groupId>org.mycore</groupId>
+          <artifactId>mycore-acl-editor2</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.mycore</groupId>
+          <artifactId>mycore-classbrowser</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.mycore</groupId>
+          <artifactId>mycore-classeditor</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.mycore</groupId>
+          <artifactId>mycore-oai</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.mycore</groupId>
+          <artifactId>mycore-session-listing</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.mycore</groupId>
+          <artifactId>mycore-webcli</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.mycore</groupId>
+          <artifactId>mycore-xeditor</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.mycore.mir</groupId>
+      <artifactId>mir-module</artifactId>
+      <version>${mir.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mycore.mir</groupId>
+      <artifactId>mir-alias-plugin</artifactId>
+      <version>${mir.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mycore.mir</groupId>
+      <artifactId>mir-navigation-plugin</artifactId>
+      <version>${mir.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>unidue.ub</groupId>
+      <artifactId>duepublico-extras</artifactId>
+      <version>2.0-SNAPSHOT</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <!-- required for org.mycore.common.xsl.MCRParameterCollector to work -->
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+  </dependencies>
+
 </project>
+
